# trading_backtester

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  backtest.py  config.yaml  fetch_data.py  main.py  metrics.py  pyproject.toml  requirements-dev.txt  requirements.txt  strategy.py  strategy.py.save  streamlit_app.py  visualize.py
.github/workflows/: pages.yml
.streamlit/: config.toml
docs/: assumptions_and_limitations.md  index.html
scripts/: build_demo_payload.py
site/: app.js  index.html  styles.css
site/data/: demo-data.json
src/trading_backtester/: __init__.py  backtest.py  cli.py  config.py  data.py  metrics.py  portfolio.py  reporting.py  research.py  strategies.py  visualize.py
tests/: test_backtest.py  test_metrics.py  test_research.py  test_strategy.py
